updated UCT search expansion

--- a/notebooks/MCTS Classes.ipynb
+++ b/notebooks/MCTS Classes.ipynb
@@ -9,58 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# main function for the Monte Carlo Tree Search from https://www.geeksforgeeks.org/ml-monte-carlo-tree-search-mcts/\n",
-    "def monte_carlo_tree_search(root): #root is an initialized dummy node, in our case, a smiles string of a hypothetical product\n",
-    "\t\n",
-    "\twhile resources_left(time, computational power): \n",
-    "\t\tleaf = traverse(root) #if node.visits = 0, rollout, else node.expand()\n",
-    "\t\tsimulation_result = rollout(leaf) \n",
-    "\t\tbackpropagate(leaf, simulation_result) \n",
-    "\t\t\n",
-    "\treturn best_child(root) \n",
-    "\n",
-    "# function for node traversal \n",
-    "def traverse(node): \n",
-    "\twhile fully_expanded(node): \n",
-    "\t\tnode = best_uct(node) \n",
-    "\t\t\n",
-    "\t# in case no children are present / node is terminal \n",
-    "\treturn pick_univisted(node.children) or node \n",
-    "\n",
-    "# function for the result of the simulation \n",
-    "def rollout(node): \n",
-    "\twhile non_terminal(node): \n",
-    "\t\tnode = rollout_policy(node) \n",
-    "\treturn result(node) \n",
-    "\n",
-    "# function for randomly selecting a child node (the heart of MCTS)\n",
-    "def rollout_policy(node): \n",
-    "\treturn pick_random(node.children) \n",
-    "\n",
-    "# function for backpropagation \n",
-    "def backpropagate(node, result): \n",
-    "\tif is_root(node) return\n",
-    "\tnode.stats = update_stats(node, result) \n",
-    "\tbackpropagate(node.parent) \n",
-    "\n",
-    "# function for selecting the best child \n",
-    "# node with highest number of visits \n",
-    "def best_child(node): \n",
-    "\treturn max_visits(child)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "terminal states enumerated\n"
+     ]
+    }
+   ],
    "source": [
     "import collections\n",
     "import random\n",
+    "import math\n",
     "\n",
     "import rdkit\n",
     "from rdkit import Chem\n",
@@ -73,7 +36,8 @@
     "from rdkit.Avalon.pyAvalonTools import GetAvalonFP\n",
     "\n",
     "import numpy as np\n",
-    "import math\n",
+    "import pandas as pd\n",
+    "import pubchempy as pc\n",
     "\n",
     "class UCTNode(): #the node object, it corresponds to a molecular state.\n",
     "    def __init__(self, mol_state, move, parent=None): #a given node needs a molecular state\n",
@@ -82,7 +46,7 @@
     "        self.is_expanded = False # nodes start unexpanded\n",
     "        self.parent = parent  # Optional[UCTNode] (if it's not the root it should have a parent)\n",
     "        self.children = {}  # Dict[move, UCTNode] starts with no children\n",
-    "        self.child_priors = np.zeros([362], dtype=np.float32) # an array of probabilities, indicating the current preference for each followup move\n",
+    "        self.child_probabilities = np.zeros([362], dtype=np.float32) # an array of probabilities, indicating the current preference for each followup move\n",
     "        self.child_number_visits = np.zeros([362], dtype=np.float32) # an array of the number of visits of each child\n",
     "        self.children_total_values = np.zeros([362], dtype=np.float32) # an array of the total values of each of the children\n",
     "        \n",
@@ -110,7 +74,7 @@
     "        return self.children_total_values / (1 + self.child_number_visits)\n",
     "\n",
     "    def child_U(self): # calculate Upper confidence bound for the child arrays\n",
-    "        return math.sqrt(self.number_visits) * (self.child_priors / (1 + self.child_number_visits))\n",
+    "        return math.sqrt(self.number_visits) * (self.child_probabilities / (1 + self.child_number_visits))\n",
     "\n",
     "    def best_child(self): #quickly finds the index of the child that has the highest aggregate of Q and U scores\n",
     "        return np.argmax(self.child_Q() + self.child_U()) \n",
@@ -118,13 +82,13 @@
     "    def select_leaf(self):\n",
     "        current = self\n",
     "        while current.is_expanded: # if not expanded immediately return self\n",
-    "            best_move = current.best_child() #get the index of the best child\n",
-    "            current = current.maybe_add_child(best_move) #adds a child at the index if it isn't there\n",
+    "            best_move = current.best_child() # get the index of the best child\n",
+    "            current = current.maybe_add_child(best_move) # adds a child at the index if it isn't there already\n",
     "        return current\n",
     "\n",
-    "    def expand(self, child_priors):\n",
+    "    def expand(self, child_probabilities):\n",
     "        self.is_expanded = True\n",
-    "        self.child_priors = child_priors\n",
+    "        self.child_probabilities = child_probabilities\n",
     "\n",
     "    def maybe_add_child(self, move):\n",
     "        if move not in self.children:\n",
@@ -139,26 +103,27 @@
     "            current.total_value += value_estimate# used to be (value_estimate * self.mol_state.to_play)\n",
     "            current = current.parent #MIGHT not be right\n",
     "\n",
+    "terminal_states = []\n",
+    "    \n",
+    "for i in range(3):\n",
+    "    terminal_states.append(random.choice(s)) # currently semi-random SMILES\n",
+    "\n",
+    "print('terminal states enumerated')            \n",
+    "            \n",
     "def UCT_search(mol_state, num_reads):\n",
     "    root = UCTNode(mol_state, move=None, parent=DummyNode()) # initializes the search starting with the given mol_state\n",
     "# the parent is a dummy node because there shouldn't be a parent for the root molecule\n",
     "    \n",
     "    pathway_choice = []\n",
     "    \n",
-    "    terminal_states = []\n",
-    "    \n",
-    "    for _ in range(num_reads):\n",
-    "        leaf = root.select_leaf()\n",
-    "        child_priors, value_estimate = Metrics.evaluate(leaf.mol_state.mol)\n",
-    "        leaf.expand(child_priors)\n",
+    "    for _ in range(num_reads): # iterator is _ because it is not used in the loop\n",
+    "        leaf = root.select_leaf() # if this is the first visit (current is not expanded), the current is evaluated, else the best child is\n",
+    "        child_probabilities, value_estimate = Metrics.evaluate(leaf.mol_state) # needs to include a rollout, Segler et al. handled rewards like such\n",
+    "        # value estimate = -1 if state is a dead end, >0 but <1 if state is partially solvable, 1 if state is solvable, and >1 if state is solved\n",
+    "        leaf.expand(child_probabilities)\n",
     "        leaf.backup(value_estimate)\n",
     "        \n",
     "    print('tree search complete')    \n",
-    "        \n",
-    "    for i in range(10):\n",
-    "        terminal_states.append(random.choice(s)) # currently semi-random SMILES\n",
-    "    \n",
-    "    print('terminal states enumerated')\n",
     "    \n",
     "    while root.mol_state.smiles not in terminal_states: # if the root is a terminal SMILES stop immediately\n",
     "        # this method has no failsafe as it assumes there always is a path\n",
@@ -171,8 +136,6 @@
     "    return pathway_choice\n",
     "    \n",
     "    #return np.argmax(root.child_number_visits) # returns the index of the root's child, which is the first retrosynthetic node\n",
-    "# doing this recursively should result in the full pathway if solved?\n",
-    "        \n",
     "\n",
     "class DummyNode(object): # makes a node without any child values or parent\n",
     "    def __init__(self): \n",
@@ -182,8 +145,14 @@
     "\n",
     "class Metrics(): #returns an array of probabilities for followup moves and a value estimation of the current node\n",
     "    @classmethod\n",
-    "    def evaluate(self, mol):\n",
-    "        return np.random.random([362]), np.random.random()\n",
+    "    def evaluate(self, mol_state):\n",
+    "        \n",
+    "        if mol_state.smiles in terminal_states:\n",
+    "            reward = 1 + np.random.random()\n",
+    "        else:\n",
+    "            reward = np.random.random()\n",
+    "        \n",
+    "        return np.random.random([362]), reward\n",
     "\n",
     "class State(): # corresponds to a molecular structure. contains a smiles string and rdkit mol\n",
     "    # NEED to make sure move indexes map to reactions # ADD enzyme? or add to node IDK\n",
@@ -198,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -241,16 +210,15 @@
      "output_type": "stream",
      "text": [
       "tree search complete\n",
-      "terminal states enumerated\n",
-      "57\n",
-      "Took 3.5820913314819336 sec to run 10000 times\n",
+      "70\n",
+      "10\n",
+      "Took 4.222696542739868 sec to run 10000 times\n",
       "parsing nodelist\n",
       "c1ccc(PONC)cc1\n",
-      "nodelist enzymes\n",
-      "oops, to view the enzymes for this pathway you need a premium metamoles subscription\n",
-      "just kidding\n",
+      "c1(PONC)ccccc1\n",
       "parsing enzymes\n",
-      "4RWKUP9W\n"
+      "0N05DG54\n",
+      "5P5PG66V\n"
      ]
     }
    ],
@@ -269,22 +237,11 @@
     "for member in node_list:\n",
     "    print(member.mol_state.smiles)\n",
     "    \n",
-    "print(\"nodelist enzymes\")\n",
-    "print(\"oops, to view the enzymes for this pathway you need a premium metamoles subscription\")\n",
-    "print(\"just kidding\")\n",
-    "\n",
     "print(\"parsing enzymes\")\n",
     "\n",
     "for member in node_list:\n",
     "    print(member.mol_state.enzyme)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
