--- a/notebooks/MCTS Examples.ipynb
+++ b/notebooks/MCTS Examples.ipynb
@@ -140,6 +140,52 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# main function for the Monte Carlo Tree Search from https://www.geeksforgeeks.org/ml-monte-carlo-tree-search-mcts/\n",
+    "def monte_carlo_tree_search(root): #root is an initialized dummy node, in our case, a smiles string of a hypothetical product\n",
+    "\t\n",
+    "\twhile resources_left(time, computational power): \n",
+    "\t\tleaf = traverse(root) #if node.visits = 0, rollout, else node.expand()\n",
+    "\t\tsimulation_result = rollout(leaf) \n",
+    "\t\tbackpropagate(leaf, simulation_result) \n",
+    "\t\t\n",
+    "\treturn best_child(root) \n",
+    "\n",
+    "# function for node traversal \n",
+    "def traverse(node): \n",
+    "\twhile fully_expanded(node): \n",
+    "\t\tnode = best_uct(node) \n",
+    "\t\t\n",
+    "\t# in case no children are present / node is terminal \n",
+    "\treturn pick_univisted(node.children) or node \n",
+    "\n",
+    "# function for the result of the simulation \n",
+    "def rollout(node): \n",
+    "\twhile non_terminal(node): \n",
+    "\t\tnode = rollout_policy(node) \n",
+    "\treturn result(node) \n",
+    "\n",
+    "# function for randomly selecting a child node (the heart of MCTS)\n",
+    "def rollout_policy(node): \n",
+    "\treturn pick_random(node.children) \n",
+    "\n",
+    "# function for backpropagation \n",
+    "def backpropagate(node, result): \n",
+    "\tif is_root(node) return\n",
+    "\tnode.stats = update_stats(node, result) \n",
+    "\tbackpropagate(node.parent) \n",
+    "\n",
+    "# function for selecting the best child \n",
+    "# node with highest number of visits \n",
+    "def best_child(node): \n",
+    "\treturn max_visits(child)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
